Update - Loot Editor lib removed, supporting libs lowered to Java 8